--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">&lt;h1&gt;This is the homepage of Dr. Amir H. Golnabi&lt;/h1&gt;</span></p>
-<p class="p1"><span class="s1">&lt;p&gt;Under Construction&lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/body&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
+<p class="p1"><span class="s1">This is the homepage of Dr. Amir H. Golnabi;</span></p>
+<p class="p1"><span class="s1">Under Construction;</span></p>
 </body>
 </html>
